build: modified build script